fix complilation errors